--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,12 +16,15 @@ body {
 
 h1 {
     font-size: 160px;
-    letter-spacing: -3px;
     font-weight: normal;
 }
 
 li {
     margin: 10px;
+}
+
+.spacer {
+    margin-bottom: 20px;
 }
 
 .footer {
