--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="page-header">
-        <h1>DO NEVER MARRY</h1>
+        <h1>DON'T EVER MARRY</h1>
     </div>
 
     <div class="row">
@@ -17,6 +17,10 @@
         <div class="center_items">
             <p><%= @random_reason.text %></p>
         </div>
+        <div class="center_items">
+            <button type="submit" class="btn">I need another...</button>
+        </div>
+        <div class="spacer"></div>
     </div>
     </div>
 
