--- a/views/index.erb
+++ b/views/index.erb
@@ -46,17 +46,16 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>
     $(document).ready("#randomButton").click(function() {
-        $("#the_reason").animate({opacity:0});
-        $.get("/getrandom",
-            function(data) {
-                $("#the_reason")
-                .text(data)
-                .animate({opacity:1});
-            }
-        );
+        $("#the_reason").animate({opacity:0}, function() {
+            $.get("/getrandom",
+                function(data) {
+                    $("#the_reason")
+                    .text(data)
+                    .animate({opacity:1});
+                }
+            );
+        });
     });
-
-    
 </script>
 </body>
 </html>
