added bootstrap responsive

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Do Never Marry</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/bootstrap-responsive.css" type="text/css" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
 </head>
