--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
 h1 {
     font-size: 160px;
     font-weight: normal;
+    line-height: 130px;
 }
 
 li {
@@ -32,7 +33,7 @@ li {
     font-size: 16px;
 }
 
-.row {
+.row-fluid {
     margin-top: 30px;
     margin-left: 0;
 }
@@ -41,7 +42,7 @@ li {
     border-bottom: 5px solid #eeeeee;
 }
 .reason_entry {
-    width: 640px;
+    width: 90%;
 }
 
 .center_items {
@@ -53,7 +54,7 @@ li {
 }
 
 .sm-pad-top {
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .legend-overlap {
