--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
 <head>
     <title>Do Never Marry</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Don't ever get married and don't ever let your friends get married either.">
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
 </head>
