--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Do Never Marry</title>
+    <title>Do Not Ever Get Married</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Don't ever get married and don't ever let your friends get married either.">
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
